--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   padding: 0;
   font-family: "Roboto", Arial, sans-serif;
   color: #000000;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   /*вернуть фон после макросетки*/
   font-size: 16px;
   line-height: 24px;
@@ -298,8 +298,23 @@ img {
   list-style: none;
 }
 
-.ability-list li {
+.ability-list .red-line {
   margin-bottom: 24px;
+  position: relative;
+  padding-left: 35px;
+/* list-style-image: url(../img/partners/line.png); */
+}
+
+.red-line::before {
+content: "";
+position: absolute;
+background-image: url("../img/partners/line.png");
+width: 26px;
+height: 26px;
+top: 10px;
+left: 0px;
+background-repeat: no-repeat;
+background-position: 0 0;
 }
 
 .picture-nerds {
@@ -482,7 +497,7 @@ img {
 
 .wrapper-contacts {
   width: 319px;
-  background-color: inherit;
+  background-color: #ffffff;
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 54px;
@@ -519,6 +534,8 @@ img {
 
 .button-connect {
   margin-top: 35px;
+  padding-left:44px;
+  padding-right: 44px;
 }
 
 .popup {
