--- a/css/style.css
+++ b/css/style.css
@@ -400,27 +400,91 @@ background-position: 0 0;
 
 .filter fieldset {
   border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 44px;
 }
 
 .filter legend {
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
+  margin-bottom: 20px;
   text-transform: uppercase;
 }
 
 .filter ul {
+padding: 0;
+margin: 0;
   list-style: none;
   line-height: 20px;
   color: #283136;
 }
 
-.filter-cover:hover,
-.filter-cover:focus {
+.filter-option {
+margin-bottom: 20px;
+padding-left: 36px;
+}
+
+.filter-option label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+}
+
+.filter-input-radio + label::before {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border: 4px solid #b8b8b8;
+  left: -34px;
+  top: -4px;
+  border-radius: 50%;
+}
+
+.filter-input-radio:checked + label::after {
+  content: "";
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  background-color: #b8b8b8;
+  left: -25px;
+  top: 5px;
+  border-radius: 50%;
+}
+
+.filter-input-checkbox + label::before {
+  content: "";
+  position: absolute;
+  width: 23px;
+  height: 23px;
+  border: 3px solid #b8b8b8;
+  left: -34px;
+  top: -4px;
+}
+
+.filter-input-checkbox:checked + label::after {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: #b8b8b8;
+  left: -27px;
+  top: 3px;
+  background-image: url(../img/icons/checkbox-on.png);
+  /* png временно, поставить svg */
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  }
+
+
+.filter-input:hover + label,
+.filter-input:focus + label {
   color: #283136;
 }
 
-.filter-cover:disabled {
+.filter-input:hover + label {
   color: #283136;
   opacity: 0.3;
 }
