--- a/css/style.css
+++ b/css/style.css
@@ -604,13 +604,16 @@ left: 1px;
 
 .catalog-item:hover .description-catalog-item {
   display: block;
+
 }
 
 .catalog-item:hover {
   border-top: 40px solid #4d4d4d;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-}
+  box-shadow: 1px 4px 4px 1px #d5d5d5,
+  -1px 4px 4px 1px #d5d5d5;
+  }
 
 .catalog-item::after {
   content: "";
