--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ img {
 }
 
 .main-header {
-  /* margin-bottom: 18px; */
   padding-top: 50px;
 }
 
@@ -183,6 +182,29 @@ left: 1px;
   background-color: #888888;
   padding-left: 120px;
   margin-bottom: 80px;
+}
+
+.features-slide {
+  width: 1160px;
+  padding-top: 70px;
+  border: solid 1px black; /*рамка временно, удалить!!!*/
+}
+
+.slide-slogan {
+padding-top: 70px;
+padding-bottom: 22px;
+font-size: 55px;
+line-height: 55px;
+font-weight: 500;
+}
+
+.slide-caption {
+padding-bottom: 43px;
+color: #283136;
+}
+
+.button-info {
+  padding-bottom: 80px;
 }
 
 /*------------------------Услуги компании------------------*/
