--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 body>*>* {
   background: rgba(225, 235, 223, 0.3);
 } */
-body>*>*>* {
+/* body>*>*>* {
   background: rgba(44, 176, 21, 0.3);
 }
 
@@ -34,7 +34,7 @@ body>*>*>*>*>* {
 
 body>*>*>*>*>*>* {
   background: rgba(150, 110, 110, 0.3);
-}
+} */
 
 a {
   text-decoration: none;
