--- a/css/style.css
+++ b/css/style.css
@@ -472,13 +472,19 @@ padding: 20px 0;
   margin: 0;
   padding: 0;
   align-items: center;
-}
+  }
 
 .partners-list li {
   width: 260px;
   margin-left: auto;
   margin-right: auto;
   opacity: 0.2;
+  }
+
+.partners-list img {
+  display: block;
+margin: 0 auto;
+/* border: solid 1px black; */
 }
 
 .partners-list li:hover {
