--- a/css/style.css
+++ b/css/style.css
@@ -405,8 +405,7 @@ img {
   margin-bottom: 24px;
   position: relative;
   padding-left: 35px;
-  /* list-style-image: url(../img/partners/line.png); */
-}
+  }
 
 .ability-list li:last-child {
   margin-bottom: 0;
@@ -479,6 +478,22 @@ img {
   display: block;
   margin: 0 auto;
   /* border: solid 1px black; */
+}
+
+/* .partners-list li {
+  margin-bottom: 24px;
+  position: relative;
+  padding-left: 35px;
+  }
+
+.partners-list li::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 38px;
+  top: 25px;
+  left: 10px;
+  background: #fb565a; */
 }
 
 .partners-list li:hover {
@@ -677,7 +692,8 @@ img {
   background-color: #eeeeee;
   position: absolute;
   width: 360px;
-  top: 352px;
+  /* top: 352px; */
+  bottom: 0;
 }
 
 .pinc-card {
@@ -688,6 +704,9 @@ img {
 .button-price {
   margin-bottom: 40px;
   width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+}
 }
 
 .button-price:active {
