--- a/css/style.css
+++ b/css/style.css
@@ -567,10 +567,11 @@ img {
   position: absolute;
   width: 25px;
   height: 25px;
-  border: 4px solid #b8b8b8;
+  border: 4px solid #4d4d4d;
   left: -34px;
   top: -4px;
   border-radius: 50%;
+  opacity: 0.3;
 }
 
 .filter-input-radio:checked+label::after {
@@ -578,10 +579,11 @@ img {
   position: absolute;
   width: 7px;
   height: 7px;
-  background-color: #b8b8b8;
+  background-color: #4d4d4d;
   left: -25px;
   top: 5px;
   border-radius: 50%;
+  opacity: 0.3;
 }
 
 .filter-input-checkbox+label::before {
@@ -589,12 +591,34 @@ img {
   position: absolute;
   width: 23px;
   height: 23px;
-  border: 3px solid #b8b8b8;
+  border: 3px solid #4d4d4d;
   left: -34px;
   top: -4px;
+  opacity: 0.3;
 }
 
 .filter-input-checkbox:checked+label::after {
+content: "";
+position: absolute;
+width: 27px;
+height: 27px;
+
+left: -34px;
+top: -4px;
+background-image: url(../img/icons/icon-filter/icon-checkbox-on.svg);
+background-repeat: no-repeat;
+background-position: 0 0;
+opacity: 0.3;
+}
+
+.filter-input:hover+label,
+.filter-input:focus+label {
+  /* color: #283136; */
+  opacity: 0.3;
+}
+
+
+/* .filter-input-checkbox:checked+label::after {
   content: "";
   position: absolute;
   width: 8px;
@@ -604,19 +628,22 @@ img {
   top: 3px;
   background-image: url(../img/icons/icon-filter/icon-checkbox-on.svg);
   /* не работает */
-  background-repeat: no-repeat;
+  /*background-repeat: no-repeat;
   background-position: 0 0;
-}
+} */
+
+
 
 .filter-input:hover+label,
 .filter-input:focus+label {
-  color: #283136;
-}
-
-.filter-input:hover+label {
-  color: #283136;
+  /* color: #283136; */
   opacity: 0.3;
 }
+
+/* .filter-input:hover+label {
+  color: #283136;
+  opacity: 0.3;
+} */
 
 .filter-button {
   color: #000000;
@@ -777,7 +804,7 @@ img {
 }
 
 .pagination-item:last-child a {
-  /* text-align: center; */
+    /* text-align: center; */
   min-width: 260px;
 }
 
